--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -47,12 +47,26 @@
 </head>
 <body>
   <footer class="admin-footer">
-    <a href="admin_dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
-    <a href="home_admin.html"><i class="fas fa-home"></i><span>Home</span></a>
-    <a href="header_admin.html"><i class="fas fa-ellipsis-h"></i><span>Header</span></a>
-    <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i><span>Shop</span></a>
-    <a href="details_admin.html"><i class="fas fa-info-circle"></i><span>Details</span></a>
-    
+    <a href="admin_dashboard.html" class="active">
+      <i class="fas fa-tachometer-alt"></i>
+      <span>Dashboard</span>
+    </a>
+    <a href="home_admin.html">
+      <i class="fas fa-home"></i>
+      <span>Home</span>
+    </a>
+    <a href="header_admin.html">
+      <i class="fas fa-ellipsis-h"></i>
+      <span>Header</span>
+    </a>
+    <a href="ecommerce_admin.html">
+      <i class="fas fa-shopping-bag"></i>
+      <span>Shop</span>
+    </a>
+    <a href="details_admin.html">
+      <i class="fas fa-info-circle"></i>
+      <span>Details</span>
+    </a>
     <!-- "More" dropdown for remaining items -->
     <div class="dropdown">
       <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
@@ -60,13 +74,41 @@
         <span>More</span>
       </a>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a></li>
-        <li><a class="dropdown-item" href="checkout_admin.html"><i class="fas fa-shopping-cart"></i> Checkout</a></li>
-        <li><a class="dropdown-item" href="delivery_admin.html"><i class="fas fa-truck"></i> Delivery</a></li>
-        <li><a class="dropdown-item" href="support_admin.html"><i class="fas fa-headset"></i> Support</a></li>
-        <li><a class="dropdown-item" href="contact_admin.html"><i class="fas fa-envelope"></i> Contact</a></li>
-        <li><a class="dropdown-item" href="analytics_admin.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
-        <li><a class="dropdown-item" href="about_admin.html"><i class="fas fa-eye"></i> About</a></li>
+        <li>
+          <a class="dropdown-item" href="payments_admin.html">
+            <i class="fas fa-credit-card"></i> Payments
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="checkout_admin.html">
+            <i class="fas fa-shopping-cart"></i> Checkout
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="delivery_admin.html">
+            <i class="fas fa-truck"></i> Delivery
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="support_admin.html">
+            <i class="fas fa-headset"></i> Support
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="contact_admin.html">
+            <i class="fas fa-envelope"></i> Contact
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="analytics_admin.html">
+            <i class="fas fa-chart-line"></i> Analytics
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="about_admin.html">
+            <i class="fas fa-eye"></i> About
+          </a>
+        </li>
       </ul>
     </div>
   </footer>
