--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Panel – NextGen E-commerce</title>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard – NextGen E-commerce</title>
   <!-- Bootstrap 5 CSS & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -11,23 +11,51 @@
     /* Global Reset & Layout */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body { height: 100%; }
-    body { 
+    body {
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       background: #f8f9fa;
     }
-    /* Placeholders for external header and footer (loaded from admin folder) */
-    #admin-header-placeholder, #admin-footer-placeholder {
-      width: 100%;
+    /* Admin Header (Internal) */
+    .admin-header {
+      background: #fff;
+      padding: 10px 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       flex-shrink: 0;
     }
-    /* Wrapper for Sidebar + Main Content */
-    .wrapper { 
-      flex: 1; 
-      display: flex; 
-      overflow: hidden; 
+    .admin-header .left-section {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
+    .admin-header .hamburger {
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #2c3e50;
+    }
+    .admin-header .brand {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+    .admin-header .center-section {
+      flex: 1;
+      text-align: center;
+      font-weight: bold;
+      font-size: 1.2rem;
+      color: #2c3e50;
+    }
+    .admin-header .right-section {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    /* Wrapper for Sidebar + Main Content */
+    .wrapper { flex: 1; display: flex; overflow: hidden; }
     /* Sidebar */
     .sidebar {
       width: 250px;
@@ -36,16 +64,10 @@
       padding: 15px;
       transition: transform 0.3s ease;
     }
-    .sidebar h2 { 
-      font-size: 1.2rem; 
-      margin-bottom: 15px; 
-    }
-    .sidebar ul { 
-      list-style: none; 
-      padding: 0; 
-    }
-    .sidebar ul li { 
-      margin-bottom: 5px; 
+    .sidebar h2 { font-size: 1.2rem; margin-bottom: 15px; }
+    .sidebar ul { list-style: none; padding: 0; }
+    .sidebar ul li {
+      margin-bottom: 5px;
     }
     .sidebar ul li a {
       text-decoration: none;
@@ -55,16 +77,9 @@
       border-radius: 4px;
     }
     .sidebar ul li a:hover,
-    .sidebar ul li a.active { 
-      background: #34495e; 
-    }
+    .sidebar ul li a.active { background: #34495e; }
     /* Main Content Area */
-    .content {
-      flex: 1;
-      padding: 15px;
-      padding-bottom: 70px; /* Extra bottom padding to avoid footer overlap */
-      overflow-y: auto;
-    }
+    .content { flex: 1; padding: 15px; overflow-y: auto; }
     /* Dashboard Styles */
     .dashboard {
       text-align: center;
@@ -86,7 +101,6 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       padding: 20px;
       color: #fff;
-      text-align: center;
     }
     .card-summary .card-icon {
       font-size: 2rem;
@@ -110,90 +124,52 @@
     @media (max-width: 767.98px) {
       .sidebar {
         position: fixed;
-        top: 0; /* external header is loaded externally */
+        top: 60px; /* admin header height */
         left: 0;
-        height: 100%;
+        height: calc(100% - 60px);
         transform: translateX(-100%);
         z-index: 2000;
       }
       .sidebar.open { transform: translateX(0); }
     }
-    /* Admin Footer Navigation */
-    .admin-footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #fff;
-      border-top: 1px solid #ddd;
-      display: flex;
-      justify-content: space-around;
-      padding: 5px 0;
-      font-size: 0.8rem;
-      z-index: 1000;
-    }
-    .admin-footer a {
-      text-decoration: none;
-      color: #2c3e50;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      flex: 1;
-      transition: color 0.3s;
-    }
-    .admin-footer a i {
-      font-size: 1.2rem;
-      margin-bottom: 2px;
-    }
-    .admin-footer a.active {
-      color: #007bff;
-    }
   </style>
   <script>
-    // Function to load external HTML into a container
-    function loadHTML(containerId, filePath) {
-      fetch(filePath)
-        .then(response => {
-          if (!response.ok) throw new Error("Error fetching " + filePath);
-          return response.text();
-        })
-        .then(html => { document.getElementById(containerId).innerHTML = html; })
-        .catch(error => console.error(error));
-    }
-    document.addEventListener("DOMContentLoaded", function() {
-      // Load external admin header and footer from the admin folder
-      loadHTML("admin-header-placeholder", "admin/admin_header.html");
-      loadHTML("admin-footer-placeholder", "admin/admin_footer.html");
-      
-      // Setup hamburger toggle for sidebar after header loads
-      setTimeout(() => {
-        const adminHamburger = document.getElementById("admin-hamburger");
-        const sidebar = document.getElementById("sidebar");
-        if (adminHamburger) {
-          adminHamburger.addEventListener("click", function(e) {
-            e.stopPropagation();
-            sidebar.classList.toggle("open");
-          });
+    document.addEventListener("DOMContentLoaded", function(){
+      // Mobile Sidebar Toggle
+      const hamburger = document.getElementById("hamburger");
+      const sidebar = document.getElementById("sidebar");
+      hamburger.addEventListener("click", function(e){
+        e.stopPropagation();
+        sidebar.classList.toggle("open");
+      });
+      document.addEventListener("click", function(e){
+        if(window.innerWidth < 768 && !sidebar.contains(e.target) && !hamburger.contains(e.target)){
+          sidebar.classList.remove("open");
         }
-        document.addEventListener("click", function(e) {
-          if (window.innerWidth < 768 && !sidebar.contains(e.target) && (!adminHamburger || !adminHamburger.contains(e.target))) {
-            sidebar.classList.remove("open");
-          }
-        });
-      }, 500);
+      });
     });
   </script>
 </head>
 <body>
-  <!-- External Admin Header -->
-  <div id="admin-header-placeholder"></div>
+  <!-- Admin Header (Internal) -->
+  <header class="admin-header">
+    <div class="left-section">
+      <i class="fas fa-bars hamburger" id="hamburger"></i>
+      <span class="brand">Faiqtech Sol</span>
+    </div>
+    <div class="center-section" id="pageTitle">Dashboard</div>
+    <div class="right-section">
+      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
+      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </header>
   
   <!-- Wrapper: Sidebar + Main Content -->
   <div class="wrapper">
     <!-- Sidebar Navigation -->
     <nav class="sidebar" id="sidebar">
       <h2>Pages</h2>
-      <ul>
+      <ul id="pagesList">
         <li><a href="admin_dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
         <li><a href="home_admin.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="header_admin.html"><i class="fas fa-ellipsis-h"></i> Header</a></li>
@@ -211,13 +187,14 @@
     
     <!-- Main Content Area -->
     <div class="content" id="mainContent">
+      <!-- Dashboard Landing Content -->
       <div class="dashboard">
         <h3>Welcome to the Admin Dashboard</h3>
         <p>Get a quick overview of your e-commerce performance.</p>
         <div class="row g-3">
           <!-- Summary Card: Total Sales -->
           <div class="col-6 col-md-3">
-            <div class="card-summary bg-primary">
+            <div class="card-summary bg-primary text-center">
               <div class="card-icon"><i class="fas fa-dollar-sign"></i></div>
               <div class="card-title">Total Sales</div>
               <div class="card-value">PKR 1,234,567</div>
@@ -225,7 +202,7 @@
           </div>
           <!-- Summary Card: New Orders -->
           <div class="col-6 col-md-3">
-            <div class="card-summary bg-success">
+            <div class="card-summary bg-success text-center">
               <div class="card-icon"><i class="fas fa-shopping-cart"></i></div>
               <div class="card-title">New Orders</div>
               <div class="card-value">245</div>
@@ -233,7 +210,7 @@
           </div>
           <!-- Summary Card: Total Products -->
           <div class="col-6 col-md-3">
-            <div class="card-summary bg-warning">
+            <div class="card-summary bg-warning text-center">
               <div class="card-icon"><i class="fas fa-box"></i></div>
               <div class="card-title">Products</div>
               <div class="card-value">1,320</div>
@@ -241,7 +218,7 @@
           </div>
           <!-- Summary Card: Customers -->
           <div class="col-6 col-md-3">
-            <div class="card-summary bg-danger">
+            <div class="card-summary bg-danger text-center">
               <div class="card-icon"><i class="fas fa-users"></i></div>
               <div class="card-title">Customers</div>
               <div class="card-value">876</div>
@@ -265,14 +242,14 @@
     </div>
   </div>
   
-  <!-- External Admin Footer -->
+  <!-- Optional: Admin Footer (if desired) -->
   <div id="admin-footer-placeholder"></div>
   
   <!-- Bootstrap Bundle JS & Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    // Initialize Sales Trend Chart when DOM is ready
+    // Initialize a sample sales trend chart
     document.addEventListener("DOMContentLoaded", function() {
       const ctx = document.getElementById('salesChart').getContext('2d');
       new Chart(ctx, {
@@ -292,7 +269,9 @@
         options: {
           responsive: true,
           maintainAspectRatio: false,
-          scales: { y: { beginAtZero: true } }
+          scales: {
+            y: { beginAtZero: true }
+          }
         }
       });
     });
