--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -17,45 +17,17 @@
       flex-direction: column;
       background: #f8f9fa;
     }
-    /* Admin Header (Internal) */
-    .admin-header {
-      background: #fff;
-      padding: 10px 15px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    /* Placeholders for external header and footer */
+    #admin-header-placeholder, #admin-footer-placeholder {
+      width: 100%;
       flex-shrink: 0;
     }
-    .admin-header .left-section {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .admin-header .hamburger {
-      font-size: 1.5rem;
-      cursor: pointer;
-      color: #2c3e50;
-    }
-    .admin-header .brand {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #2c3e50;
-    }
-    .admin-header .center-section {
-      flex: 1;
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: #2c3e50;
-    }
-    .admin-header .right-section {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
     /* Wrapper for Sidebar + Main Content */
-    .wrapper { flex: 1; display: flex; overflow: hidden; }
+    .wrapper {
+      flex: 1;
+      display: flex;
+      overflow: hidden;
+    }
     /* Sidebar */
     .sidebar {
       width: 250px;
@@ -66,9 +38,7 @@
     }
     .sidebar h2 { font-size: 1.2rem; margin-bottom: 15px; }
     .sidebar ul { list-style: none; padding: 0; }
-    .sidebar ul li {
-      margin-bottom: 5px;
-    }
+    .sidebar ul li { margin-bottom: 5px; }
     .sidebar ul li a {
       text-decoration: none;
       color: inherit;
@@ -79,7 +49,12 @@
     .sidebar ul li a:hover,
     .sidebar ul li a.active { background: #34495e; }
     /* Main Content Area */
-    .content { flex: 1; padding: 15px; overflow-y: auto; }
+    .content {
+      flex: 1;
+      padding: 15px;
+      padding-bottom: 70px; /* Extra bottom padding to avoid footer overlap */
+      overflow-y: auto;
+    }
     /* Dashboard Styles */
     .dashboard {
       text-align: center;
@@ -101,6 +76,7 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       padding: 20px;
       color: #fff;
+      text-align: center;
     }
     .card-summary .card-icon {
       font-size: 2rem;
@@ -124,7 +100,7 @@
     @media (max-width: 767.98px) {
       .sidebar {
         position: fixed;
-        top: 60px; /* admin header height */
+        top: 60px; /* external header height */
         left: 0;
         height: calc(100% - 60px);
         transform: translateX(-100%);
@@ -134,35 +110,42 @@
     }
   </style>
   <script>
-    document.addEventListener("DOMContentLoaded", function(){
-      // Mobile Sidebar Toggle
-      const hamburger = document.getElementById("hamburger");
-      const sidebar = document.getElementById("sidebar");
-      hamburger.addEventListener("click", function(e){
-        e.stopPropagation();
-        sidebar.classList.toggle("open");
-      });
-      document.addEventListener("click", function(e){
-        if(window.innerWidth < 768 && !sidebar.contains(e.target) && !hamburger.contains(e.target)){
-          sidebar.classList.remove("open");
+    // Load external admin header and footer from the admin folder
+    function loadHTML(containerId, filePath) {
+      fetch(filePath)
+        .then(response => {
+          if (!response.ok) throw new Error("Error fetching " + filePath);
+          return response.text();
+        })
+        .then(html => { document.getElementById(containerId).innerHTML = html; })
+        .catch(error => console.error(error));
+    }
+    document.addEventListener("DOMContentLoaded", function() {
+      loadHTML("admin-header-placeholder", "admin/admin_header.html");
+      loadHTML("admin-footer-placeholder", "admin/admin_footer.html");
+      
+      // Setup mobile sidebar toggle after header loads
+      setTimeout(() => {
+        const adminHamburger = document.getElementById("admin-hamburger");
+        const sidebar = document.getElementById("sidebar");
+        if (adminHamburger) {
+          adminHamburger.addEventListener("click", function(e) {
+            e.stopPropagation();
+            sidebar.classList.toggle("open");
+          });
         }
-      });
+        document.addEventListener("click", function(e) {
+          if (window.innerWidth < 768 && !sidebar.contains(e.target) && (!adminHamburger || !adminHamburger.contains(e.target))) {
+            sidebar.classList.remove("open");
+          }
+        });
+      }, 500);
     });
   </script>
 </head>
 <body>
-  <!-- Admin Header (Internal) -->
-  <header class="admin-header">
-    <div class="left-section">
-      <i class="fas fa-bars hamburger" id="hamburger"></i>
-      <span class="brand">Faiqtech Sol</span>
-    </div>
-    <div class="center-section" id="pageTitle">Dashboard</div>
-    <div class="right-section">
-      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
-      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
-    </div>
-  </header>
+  <!-- External Admin Header -->
+  <div id="admin-header-placeholder"></div>
   
   <!-- Wrapper: Sidebar + Main Content -->
   <div class="wrapper">
@@ -187,7 +170,6 @@
     
     <!-- Main Content Area -->
     <div class="content" id="mainContent">
-      <!-- Dashboard Landing Content -->
       <div class="dashboard">
         <h3>Welcome to the Admin Dashboard</h3>
         <p>Get a quick overview of your e-commerce performance.</p>
@@ -242,14 +224,14 @@
     </div>
   </div>
   
-  <!-- Optional: Admin Footer (if desired) -->
+  <!-- External Admin Footer -->
   <div id="admin-footer-placeholder"></div>
   
   <!-- Bootstrap Bundle JS & Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    // Initialize a sample sales trend chart
+    // Initialize Sales Trend Chart when DOM is ready
     document.addEventListener("DOMContentLoaded", function() {
       const ctx = document.getElementById('salesChart').getContext('2d');
       new Chart(ctx, {
@@ -269,9 +251,7 @@
         options: {
           responsive: true,
           maintainAspectRatio: false,
-          scales: {
-            y: { beginAtZero: true }
-          }
+          scales: { y: { beginAtZero: true } }
         }
       });
     });
