--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -17,24 +17,28 @@
       align-items: center;
       padding: 10px 0;
       color: #fff;
-      z-index: 1000;
+      z-index: 1001;
     }
     .admin-footer a {
       text-decoration: none;
       color: #fff;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       text-align: center;
       flex: 1;
+      position: relative;
     }
     .admin-footer a i {
       display: block;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-bottom: 2px;
     }
     /* More dropdown styling */
     .more-dropdown {
       position: relative;
       display: inline-block;
+    }
+    .more-dropdown a {
+      cursor: pointer;
     }
     .more-dropdown-content {
       display: none;
@@ -43,19 +47,27 @@
       left: 50%;
       transform: translateX(-50%);
       background-color: #fff;
-      min-width: 150px;
+      min-width: 160px;
+      max-height: 250px;
+      overflow-y: auto;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
       border-radius: 4px;
-      z-index: 1100;
+      z-index: 1101;
     }
     .more-dropdown-content a {
-      color: #333;
+      color: #343a40;
       padding: 10px;
       text-decoration: none;
       display: block;
       font-size: 0.9rem;
+      border-bottom: 1px solid #ddd;
     }
-    .more-dropdown-content a:hover { background-color: #f1f1f1; }
+    .more-dropdown-content a:last-child {
+      border-bottom: none;
+    }
+    .more-dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
     .more-dropdown:hover .more-dropdown-content {
       display: block;
     }
@@ -68,7 +80,7 @@
     <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i>Shop</a>
     <a href="details_admin.html"><i class="fas fa-info-circle"></i>Details</a>
     <div class="more-dropdown">
-      <a href="javascript:void(0)"><i class="fas fa-ellipsis-h"></i>More</a>
+      <a><i class="fas fa-ellipsis-h"></i>More</a>
       <div class="more-dropdown-content">
         <a href="payments_admin.html">Payments</a>
         <a href="checkout_admin.html">Checkout</a>
