--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -7,21 +7,35 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: 'Roboto', sans-serif; margin: 0; padding: 0; background: #f0f2f5; }
-    main { padding: 100px 20px 80px; }
-    .dashboard-header { text-align: center; margin-bottom: 40px; }
-    .dashboard-header h1 { font-size: 2.5rem; margin-bottom: 10px; }
-    .dashboard-header p { font-size: 1.1rem; color: #555; }
-    .card-container {
-      display: flex;
-      flex-wrap: wrap;
+    body { 
+      font-family: 'Roboto', sans-serif; 
+      margin: 0; 
+      padding: 0; 
+      background: #f0f2f5; 
+    }
+    main { 
+      padding: 100px 20px 80px; 
+    }
+    .dashboard-header { 
+      text-align: center; 
+      margin-bottom: 40px; 
+    }
+    .dashboard-header h1 { 
+      font-size: 2.5rem; 
+      margin-bottom: 10px; 
+    }
+    .dashboard-header p { 
+      font-size: 1.1rem; 
+      color: #555; 
+    }
+    /* Grid layout for summary cards */
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      justify-content: center;
       margin-bottom: 40px;
     }
     .summary-card {
-      flex: 1 1 220px;
-      background: linear-gradient(135deg, #007bff, #00c6ff);
       border-radius: 10px;
       padding: 20px;
       text-align: center;
@@ -33,6 +47,11 @@
       transform: translateY(-5px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
+    /* Different gradient backgrounds for each card */
+    .card-sales { background: linear-gradient(135deg, #007bff, #00c6ff); }
+    .card-orders { background: linear-gradient(135deg, #28a745, #85e085); }
+    .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
+    .card-customers { background: linear-gradient(135deg, #fd7e14, #ff9f59); }
     .summary-card h3 { margin-bottom: 10px; font-size: 1.2rem; }
     .summary-card p { font-size: 1.8rem; font-weight: bold; margin: 0; }
     .chart-section {
@@ -71,21 +90,21 @@
       <p>Welcome, Admin. Manage your site content and view real-time analytics.</p>
     </div>
     
-    <!-- Summary Cards -->
-    <div class="card-container">
-      <div class="summary-card">
+    <!-- Summary Cards Grid -->
+    <div class="card-grid">
+      <div class="summary-card card-sales">
         <h3>Total Sales</h3>
         <p>$12,345</p>
       </div>
-      <div class="summary-card">
+      <div class="summary-card card-orders">
         <h3>New Orders</h3>
         <p>45</p>
       </div>
-      <div class="summary-card">
+      <div class="summary-card card-products">
         <h3>Products</h3>
         <p>120</p>
       </div>
-      <div class="summary-card">
+      <div class="summary-card card-customers">
         <h3>Customers</h3>
         <p>78</p>
       </div>
