--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -17,7 +17,8 @@
       align-items: center;
       padding: 10px 0;
       color: #fff;
-      z-index: 1001;
+      z-index: 1002;
+      overflow: hidden;
     }
     .admin-footer a {
       text-decoration: none;
@@ -26,6 +27,7 @@
       text-align: center;
       flex: 1;
       position: relative;
+      padding: 0 5px;
     }
     .admin-footer a i {
       display: block;
@@ -36,9 +38,11 @@
     .more-dropdown {
       position: relative;
       display: inline-block;
+      width: 100%;
     }
-    .more-dropdown a {
+    .more-dropdown > a {
       cursor: pointer;
+      white-space: nowrap;
     }
     .more-dropdown-content {
       display: none;
@@ -46,27 +50,28 @@
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: #fff;
+      background-color: #343a40;
       min-width: 160px;
       max-height: 250px;
       overflow-y: auto;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
       border-radius: 4px;
-      z-index: 1101;
+      z-index: 1102;
     }
     .more-dropdown-content a {
-      color: #343a40;
+      color: #fff;
       padding: 10px;
       text-decoration: none;
       display: block;
       font-size: 0.9rem;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #495057;
+      white-space: nowrap;
     }
     .more-dropdown-content a:last-child {
       border-bottom: none;
     }
     .more-dropdown-content a:hover {
-      background-color: #f1f1f1;
+      background-color: #495057;
     }
     .more-dropdown:hover .more-dropdown-content {
       display: block;
@@ -82,13 +87,13 @@
     <div class="more-dropdown">
       <a><i class="fas fa-ellipsis-h"></i>More</a>
       <div class="more-dropdown-content">
-        <a href="payments_admin.html">Payments</a>
-        <a href="checkout_admin.html">Checkout</a>
-        <a href="delivery_admin.html">Delivery</a>
-        <a href="support_admin.html">Support</a>
-        <a href="contact_admin.html">Contact</a>
-        <a href="analytics_admin.html">Analytics</a>
-        <a href="about_admin.html">About</a>
+        <a href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a>
+        <a href="checkout_admin.html"><i class="fas fa-shopping-cart"></i> Checkout</a>
+        <a href="delivery_admin.html"><i class="fas fa-truck"></i> Delivery</a>
+        <a href="support_admin.html"><i class="fas fa-headset"></i> Support</a>
+        <a href="contact_admin.html"><i class="fas fa-envelope"></i> Contact</a>
+        <a href="analytics_admin.html"><i class="fas fa-chart-line"></i> Analytics</a>
+        <a href="about_admin.html"><i class="fas fa-info"></i> About</a>
       </div>
     </div>
   </footer>
