--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -11,7 +11,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      background: #343a40;
+      background: #222; /* Dark background */
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -28,6 +28,7 @@
       flex: 1;
       position: relative;
       padding: 0 5px;
+      white-space: nowrap;
     }
     .admin-footer a i {
       display: block;
@@ -42,7 +43,6 @@
     }
     .more-dropdown > a {
       cursor: pointer;
-      white-space: nowrap;
     }
     .more-dropdown-content {
       display: none;
@@ -50,11 +50,11 @@
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: #343a40;
+      background-color: #222;
       min-width: 160px;
       max-height: 250px;
       overflow-y: auto;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
       border-radius: 4px;
       z-index: 1102;
     }
@@ -64,14 +64,13 @@
       text-decoration: none;
       display: block;
       font-size: 0.9rem;
-      border-bottom: 1px solid #495057;
-      white-space: nowrap;
+      border-bottom: 1px solid #444;
     }
     .more-dropdown-content a:last-child {
       border-bottom: none;
     }
     .more-dropdown-content a:hover {
-      background-color: #495057;
+      background-color: #444;
     }
     .more-dropdown:hover .more-dropdown-content {
       display: block;
