--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -2,31 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Footer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FontAwesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    body { margin: 0; padding: 0; }
     .admin-footer {
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
-      background: #222; /* Dark background */
+      background: #222;
       display: flex;
       justify-content: space-around;
       align-items: center;
       padding: 10px 0;
       color: #fff;
-      z-index: 1002;
+      z-index: 1000;
       overflow: hidden;
     }
     .admin-footer a {
-      text-decoration: none;
       color: #fff;
+      text-decoration: none;
       font-size: 0.95rem;
       text-align: center;
       flex: 1;
-      position: relative;
       padding: 0 5px;
       white-space: nowrap;
     }
@@ -35,42 +36,42 @@
       font-size: 1.3rem;
       margin-bottom: 2px;
     }
-    /* More dropdown styling */
     .more-dropdown {
       position: relative;
-      display: inline-block;
-      width: 100%;
+      flex: 1;
+      text-align: center;
     }
     .more-dropdown > a {
       cursor: pointer;
+      white-space: nowrap;
     }
     .more-dropdown-content {
-      display: none;
       position: absolute;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: #222;
-      min-width: 160px;
-      max-height: 250px;
-      overflow-y: auto;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      background: #222;
+      border: 1px solid #444;
       border-radius: 4px;
-      z-index: 1102;
+      overflow: hidden;
+      display: none;
+      z-index: 1100;
+      min-width: 150px;
     }
     .more-dropdown-content a {
-      color: #fff;
-      padding: 10px;
-      text-decoration: none;
       display: block;
+      color: #fff;
+      padding: 8px 10px;
+      text-decoration: none;
       font-size: 0.9rem;
       border-bottom: 1px solid #444;
+      white-space: nowrap;
     }
     .more-dropdown-content a:last-child {
       border-bottom: none;
     }
     .more-dropdown-content a:hover {
-      background-color: #444;
+      background: #444;
     }
     .more-dropdown:hover .more-dropdown-content {
       display: block;
