--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -2,33 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard - Faiqtech Sol</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap CSS (optional for grid layout) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { 
       font-family: 'Roboto', sans-serif; 
       margin: 0; 
-      padding: 0; 
       background: #f0f2f5; 
     }
     main { 
       padding: 100px 20px 80px; 
     }
-    .dashboard-header { 
-      text-align: center; 
-      margin-bottom: 40px; 
+    .dashboard-header {
+      text-align: center;
+      margin-bottom: 40px;
     }
-    .dashboard-header h1 { 
-      font-size: 2.5rem; 
-      margin-bottom: 10px; 
+    .dashboard-header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
-    .dashboard-header p { 
-      font-size: 1.1rem; 
-      color: #555; 
+    .dashboard-header p {
+      font-size: 1.1rem;
+      color: #555;
     }
-    /* Grid layout for summary cards */
+    /* Responsive grid for summary cards */
     .card-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -47,7 +48,7 @@
       transform: translateY(-5px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
-    /* Different gradient backgrounds for each card */
+    /* Multi-color gradients */
     .card-sales { background: linear-gradient(135deg, #007bff, #00c6ff); }
     .card-orders { background: linear-gradient(135deg, #28a745, #85e085); }
     .card-products { background: linear-gradient(135deg, #6f42c1, #a285e6); }
@@ -81,7 +82,7 @@
   </style>
 </head>
 <body>
-  <!-- External Admin Header -->
+  <!-- Load Admin Header -->
   <div id="admin-header-placeholder"></div>
   
   <main>
@@ -90,7 +91,7 @@
       <p>Welcome, Admin. Manage your site content and view real-time analytics.</p>
     </div>
     
-    <!-- Summary Cards Grid -->
+    <!-- Summary Cards -->
     <div class="card-grid">
       <div class="summary-card card-sales">
         <h3>Total Sales</h3>
@@ -125,19 +126,18 @@
     </div>
   </main>
   
-  <!-- External Admin Footer -->
+  <!-- Load Admin Footer -->
   <div id="admin-footer-placeholder"></div>
   
   <script>
+    // Function to load external HTML into a placeholder
     function loadHTML(elementId, filePath) {
       fetch(filePath)
         .then(response => {
           if (!response.ok) throw new Error("Error fetching " + filePath);
           return response.text();
         })
-        .then(html => {
-          document.getElementById(elementId).innerHTML = html;
-        })
+        .then(html => { document.getElementById(elementId).innerHTML = html; })
         .catch(error => console.error(error));
     }
     document.addEventListener("DOMContentLoaded", function() {
