--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -21,7 +21,7 @@
       padding: 10px 0;
       color: #fff;
       z-index: 1000;
-      overflow: hidden;
+      overflow: visible;
     }
     .admin-footer a {
       text-decoration: none;
@@ -44,6 +44,7 @@
     }
     .more-dropdown > a {
       cursor: pointer;
+      white-space: nowrap;
     }
     .more-dropdown-content {
       position: absolute;
