--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Admin Dashboard - Faiqtech Sol</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CSS (optional for grid layout) -->
+  <!-- Bootstrap CSS for layout -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -91,7 +91,7 @@
       <p>Welcome, Admin. Manage your site content and view real-time analytics.</p>
     </div>
     
-    <!-- Summary Cards -->
+    <!-- Summary Cards Grid -->
     <div class="card-grid">
       <div class="summary-card card-sales">
         <h3>Total Sales</h3>
@@ -130,7 +130,6 @@
   <div id="admin-footer-placeholder"></div>
   
   <script>
-    // Function to load external HTML into a placeholder
     function loadHTML(elementId, filePath) {
       fetch(filePath)
         .then(response => {
@@ -164,10 +163,7 @@
           responsive: true,
           maintainAspectRatio: false,
           scales: {
-            y: {
-              beginAtZero: true,
-              ticks: { callback: function(value) { return '$' + value; } }
-            }
+            y: { beginAtZero: true, ticks: { callback: function(value) { return '$' + value; } } }
           }
         }
       });
